syntax = "proto3";

package catpb;

option go_package = "api/catpb";

service Cat {
  rpc GetMyCat(GetMyCatMessage) returns (MyCatResponse) {}
}

message GetMyCatMessage {
  string target_cat = 1;
}

message MyCatResponse {
  string name = 1;
  string kind = 2;
}
